fix: use sidebar overflow auto

--- a/shared/scss/_sidebar.scss
+++ b/shared/scss/_sidebar.scss
@@ -21,7 +21,7 @@ body {
   height: 100%;
   box-sizing: border-box;
   display: flex;
-  overflow: scroll;
+  overflow: auto;
 }
 
 #map {
